[package]
name = "template"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.104"
rig = "0.40.0"
schemars = "1.2.1"
serde = { version = "1.0.229", features = ["derive"] }
tokio = { version = "1.53.1", features = ["rt", "rt-multi-thread", "macros", "time", "process"] }
